rendered/envs/zoo/ocis/ingress-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  labels:
    app.kubernetes.io/instance: ocis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ocis
    app.kubernetes.io/version: 4.0.1
    helm.sh/chart: ocis-0.5.0
  name: proxy
  namespace: ocis
spec:
  rules:
    - host: ocis.zoo.budd.ee
      http:
        paths:
          - backend:
              service:
                name: proxy
                port:
                  number: 9200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ocis.zoo.budd.ee
      secretName: ocis-tls
